projects/compiler/test/typechecker/import/error_imported_type_mismatch.1.out
Error at %FILE_NAME%:5:25
Type mismatch for parameter 'color'
  |  val _ = Foo(color: Color.Purple)
                             ^
Expected: Color
but instead found: Color
