projects/compiler/test/typechecker/import/error_imported_type_mismatch.1.abra
import Foo from "./_exports"

enum Color { Purple }

val _ = Foo(color: Color.Purple)
